✨ feat(project-creation): choose the pre-confirm status for 100/101 matches
