# lib/Controller/API/App/CreateProjectController.php
@@ -35,6 +35,7 @@ use TypeError;
 use Utils\ActiveMQ\ClientHelpers\ProjectQueue;
 use Utils\Constants\Constants;
 use Utils\Constants\ProjectStatus;
+use Utils\Constants\TranslationStatus;
 use Utils\Engines\AbstractEngine;
 use Utils\Engines\EnginesFactory;
 use Utils\Engines\Lara;
@@ -193,7 +194,7 @@ class CreateProjectController extends AbstractStatefulKleinController
         ]);
         $disable_tms_engine_flag = filter_var($this->request->param('disable_tms_engine'), FILTER_VALIDATE_BOOLEAN);
         $pretranslate_100 = filter_var($this->request->param('pretranslate_100'), FILTER_SANITIZE_NUMBER_INT);
-        $pretranslate_101 = filter_var($this->request->param('pretranslate_101'), FILTER_SANITIZE_NUMBER_INT);
+        $pretranslate_101 = filter_var($this->request->param('pretranslate_101') ?? 1, FILTER_SANITIZE_NUMBER_INT);
         $pretranslate_101_lock = filter_var($this->request->param('pretranslate_101_lock') ?? 1, FILTER_VALIDATE_INT, [
             'options' => ['min_range' => 0, 'max_range' => 1],
             'flags' => FILTER_NULL_ON_FAILURE,
@@ -207,6 +208,14 @@ class CreateProjectController extends AbstractStatefulKleinController
         ]);
         if ($pretranslate_100_lock === null) {
             throw new InvalidArgumentException("Invalid pretranslate_100_lock value", -6);
+        }
+        $pretranslate_101_status = $this->request->param('pretranslate_101_status') ?? TranslationStatus::STATUS_APPROVED;
+        if (!in_array($pretranslate_101_status, ProjectsMetadataMarshaller::PRE_TRANSLATE_STATUSES, true)) {
+            throw new InvalidArgumentException("Invalid pretranslate_101_status value", -6);
+        }
+        $pretranslate_100_status = $this->request->param('pretranslate_100_status') ?? TranslationStatus::STATUS_TRANSLATED;
+        if (!in_array($pretranslate_100_status, ProjectsMetadataMarshaller::PRE_TRANSLATE_STATUSES, true)) {
+            throw new InvalidArgumentException("Invalid pretranslate_100_status value", -6);
         }
         $tm_prioritization = filter_var($this->request->param('tm_prioritization'), FILTER_SANITIZE_NUMBER_INT);
         $id_team = filter_var($this->request->param('id_team'), FILTER_SANITIZE_NUMBER_INT, ['flags' => FILTER_REQUIRE_SCALAR]);
@@ -357,6 +366,8 @@ class CreateProjectController extends AbstractStatefulKleinController
             'pretranslate_101' => $pretranslate_101,
             'pretranslate_101_lock' => $pretranslate_101_lock,
             'pretranslate_100_lock' => $pretranslate_100_lock,
+            'pretranslate_101_status' => $pretranslate_101_status,
+            'pretranslate_100_status' => $pretranslate_100_status,
             'tm_prioritization' => $tm_prioritization ?? null,
             'id_team' => $id_team,
             'enable_mt_analysis' => $enable_mt_analysis ?? null,
@@ -919,6 +930,8 @@ class CreateProjectController extends AbstractStatefulKleinController
         $projectStructure->pretranslate_101 = $data['pretranslate_101'];
         $projectStructure->pretranslate_101_lock = $data['pretranslate_101_lock'];
         $projectStructure->pretranslate_100_lock = $data['pretranslate_100_lock'];
+        $projectStructure->pretranslate_101_status = $data['pretranslate_101_status'];
+        $projectStructure->pretranslate_100_status = $data['pretranslate_100_status'];
         $projectStructure->dialect_strict = $data['dialect_strict'];
         $projectStructure->only_private = $data['only_private'];
         $projectStructure->due_date = $data['due_date'];
