# lib/Controller/API/V1/NewController.php
@@ -54,6 +54,7 @@ use Utils\ActiveMQ\ClientHelpers\ProjectQueue;
 use Utils\Constants\Constants;
 use Utils\Constants\ProjectStatus;
 use Utils\Constants\TmKeyPermissions;
+use Utils\Constants\TranslationStatus;
 use Utils\Engines\AbstractEngine;
 use Utils\Engines\EnginesFactory;
 use Utils\Engines\Lara;
@@ -241,6 +242,8 @@ class NewController extends KleinController
         $projectStructure->pretranslate_101 = isset($request['pretranslate_101']) ? (int)$request['pretranslate_101'] : 1;
         $projectStructure->pretranslate_101_lock = $request['pretranslate_101_lock'];
         $projectStructure->pretranslate_100_lock = $request['pretranslate_100_lock'];
+        $projectStructure->pretranslate_101_status = $request['pretranslate_101_status'];
+        $projectStructure->pretranslate_100_status = $request['pretranslate_100_status'];
 
         //default gets all public matches from TM
         $projectStructure->only_private = (int)(isset($request['get_public_matches']) && !$request['get_public_matches']);
@@ -371,7 +374,10 @@ class NewController extends KleinController
         $payable_rate_template_name = $payable_rate_template_name !== '' ? $payable_rate_template_name : null;
         $public_tm_penalty = filter_var($this->request->param('public_tm_penalty'), FILTER_SANITIZE_NUMBER_INT);
         $pretranslate_100 = filter_var($this->request->param('pretranslate_100'), FILTER_VALIDATE_BOOLEAN);
-        $pretranslate_101 = filter_var($this->request->param('pretranslate_101'), FILTER_VALIDATE_BOOLEAN);
+        $pretranslate_101 = filter_var($this->request->param('pretranslate_101') ?? true, FILTER_VALIDATE_BOOLEAN, FILTER_NULL_ON_FAILURE);
+        if ($pretranslate_101 === null) {
+            throw new InvalidArgumentException("Invalid pretranslate_101 value", -6);
+        }
         $pretranslate_101_lock = filter_var($this->request->param('pretranslate_101_lock') ?? 1, FILTER_VALIDATE_INT, [
             'options' => ['min_range' => 0, 'max_range' => 1],
             'flags' => FILTER_NULL_ON_FAILURE,
@@ -385,6 +391,14 @@ class NewController extends KleinController
         ]);
         if ($pretranslate_100_lock === null) {
             throw new InvalidArgumentException("Invalid pretranslate_100_lock value", -6);
+        }
+        $pretranslate_101_status = $this->request->param('pretranslate_101_status') ?? TranslationStatus::STATUS_APPROVED;
+        if (!in_array($pretranslate_101_status, ProjectsMetadataMarshaller::PRE_TRANSLATE_STATUSES, true)) {
+            throw new InvalidArgumentException("Invalid pretranslate_101_status value", -6);
+        }
+        $pretranslate_100_status = $this->request->param('pretranslate_100_status') ?? TranslationStatus::STATUS_TRANSLATED;
+        if (!in_array($pretranslate_100_status, ProjectsMetadataMarshaller::PRE_TRANSLATE_STATUSES, true)) {
+            throw new InvalidArgumentException("Invalid pretranslate_100_status value", -6);
         }
         $private_tm_key = filter_var($this->request->param('private_tm_key'), FILTER_SANITIZE_SPECIAL_CHARS, ['flags' => FILTER_FLAG_STRIP_LOW]);
         $private_tm_key_json = filter_var($this->request->param('private_tm_key_json'), FILTER_SANITIZE_FULL_SPECIAL_CHARS, ['flags' => FILTER_FLAG_STRIP_LOW | FILTER_FLAG_NO_ENCODE_QUOTES]);
@@ -585,6 +599,8 @@ class NewController extends KleinController
             'pretranslate_101' => $pretranslate_101,
             'pretranslate_101_lock' => $pretranslate_101_lock,
             'pretranslate_100_lock' => $pretranslate_100_lock,
+            'pretranslate_101_status' => $pretranslate_101_status,
+            'pretranslate_100_status' => $pretranslate_100_status,
             'id_team' => $id_team,
             'team' => $team,
             'enable_mt_analysis' => $enable_mt_analysis,
